Address some warnings and make use of newer language level features